corrected gap on membership__steps

--- a/styles/style.css
+++ b/styles/style.css
@@ -343,7 +343,7 @@
   margin: 100px 0 0;
   justify-content: center;
   display: flex;
-  gap: 20px;
+  gap: 40px;
   /* Add styles */
 }
 
